# 6DOF-Manipulator-Simulation

./: .gitignore  README.md
Kinematics_and_Dynamics/: .gitignore  AI.m  Forward_Inverse_Velocity_Kinematics_and_Dynamics.m  Forward_Kinematics.m  Forward_Kinematics_numeric.m  Jacobian.m  Jacobian_numeric.m  README.md  coreolis_and_centrifugal_forces_numeric.m  gravity_forces_2_numeric.m  gravity_forces_numeric.m  inertia_forces_numeric.m
Kinematics_and_Dynamics/Codegen/lib/Forward_Kinematics/: Forward_Kinematics.cpp  Forward_Kinematics.h  Forward_Kinematics_initialize.cpp  Forward_Kinematics_initialize.h  Forward_Kinematics_terminate.cpp  Forward_Kinematics_terminate.h  Forward_Kinematics_types.h  buildInfo.mat  codeInfo.mat  make_exception.mat  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
Kinematics_and_Dynamics/Codegen/lib/Forward_Kinematics_numeric/: Forward_Kinematics_numeric.cpp  Forward_Kinematics_numeric.h  Forward_Kinematics_numeric_initialize.cpp  Forward_Kinematics_numeric_initialize.h  Forward_Kinematics_numeric_terminate.cpp  Forward_Kinematics_numeric_terminate.h  Forward_Kinematics_numeric_types.h  buildInfo.mat  codeInfo.mat  make_exception.mat  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
Kinematics_and_Dynamics/Codegen/lib/Jacobian/: Jacobian.cpp  Jacobian.h  Jacobian_initialize.cpp  Jacobian_initialize.h  Jacobian_terminate.cpp  Jacobian_terminate.h  Jacobian_types.h  buildInfo.mat  codeInfo.mat  make_exception.mat  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
Kinematics_and_Dynamics/Codegen/lib/Jacobian_numeric/: Jacobian_numeric.cpp  Jacobian_numeric.h  Jacobian_numeric_initialize.cpp  Jacobian_numeric_initialize.h  Jacobian_numeric_terminate.cpp  Jacobian_numeric_terminate.h  Jacobian_numeric_types.h  buildInfo.mat  codeInfo.mat  make_exception.mat  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
Kinematics_and_Dynamics/Codegen/lib/coreolis_and_centrifugal_forces_numeric/: buildInfo.mat  codeInfo.mat  coreolis_and_centrifugal_forces_numeric.cpp  coreolis_and_centrifugal_forces_numeric.h  coreolis_and_centrifugal_forces_numeric_initialize.cpp  coreolis_and_centrifugal_forces_numeric_initialize.h  coreolis_and_centrifugal_forces_numeric_terminate.cpp  coreolis_and_centrifugal_forces_numeric_terminate.h  coreolis_and_centrifugal_forces_numeric_types.h  make_exception.mat  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
Kinematics_and_Dynamics/Codegen/lib/gravity_forces_2_numeric/: buildInfo.mat  codeInfo.mat  gcGuiReport.mat  gravity_forces_2_numeric.cpp  gravity_forces_2_numeric.h  gravity_forces_2_numeric_initialize.cpp  gravity_forces_2_numeric_initialize.h  gravity_forces_2_numeric_terminate.cpp  gravity_forces_2_numeric_terminate.h  gravity_forces_2_numeric_types.h  (+9 more)
Kinematics_and_Dynamics/Documentation/: DH_6DOF.vsdx
crustcrawler_control/: CMakeLists.txt  package.xml
crustcrawler_control/config/: crustcrawler_effort.yaml  crustcrawler_position.yaml  crustcrawler_trajectory.yaml  crustcrawler_trajectory_small.yaml  crustcrawler_velocity.yaml
crustcrawler_control/launch/: control.launch
crustcrawler_description/: CMakeLists.txt  package.xml
crustcrawler_description/launch/: description.launch
crustcrawler_description/meshes/: FR05-H101.STL  FR07-H101.STL  GRIPPER_LEFT.STL  GRIPPER_RIGHT.STL  MX-28AT_AR.STL  MX-64AT_AR.STL
crustcrawler_description/urdf/: brackets.urdf.xacro  crustcrawler.urdf.xacro  crustcrawler.xacro  gripper.urdf.xacro  inertias.urdf.xacro  mx28at.urdf.xacro  mx64at.urdf.xacro  turntable.urdf.xacro
crustcrawler_gazebo/: CMakeLists.txt  package.xml
crustcrawler_gazebo/launch/: controller.launch  empty_world.launch  spawn_crustcrawler.launch
crustcrawler_gazebo/urdf/: crustcrawler.gazebo.xacro
crustcrawler_msgs/: CMakeLists.txt  package.xml
crustcrawler_msgs/msg/: CircleDescription.msg
crustcrawler_simulation/: CMakeLists.txt  package.xml
docs/: README.md
(+272 files in other folders)
