<package format="2">
	<name>crustcrawler_control</name>
	<version>0.0.1</version>

	<description>This package contains the controller setup for the
		CrustCrawler</description>
	<author email="jorgehn@student.matnat.uio.no">Jørgen Nordmoen</author>
	<maintainer email="jorgehn@student.matnat.uio.no">Jørgen Nordmoen</maintainer>

	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roslaunch</build_depend>
	<exec_depend>controller_manager</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>ros_controllers</exec_depend>
</package>
