<?xml version="1.0"?>
<package format="2">
  <name>crustcrawler_gazebo</name>
  <version>0.0.1</version>
  <description>Crustcrawler Gazebo simulation package</description>

  <author email="jorgehn@student.matnat.uio.no">Jørgen Nordmoen</author>
  <maintainer email="jorgehn@student.matnat.uio.no">Jørgen Nordmoen</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>crustcrawler_description</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
