<package format="2">
	<name>crustcrawler_msgs</name>
	<version>0.0.1</version>

	<description>This package contains custom messages used for Crustcrawler</description>
	<author email="jorgehn@student.matnat.uio.no">Jørgen Nordmoen</author>

	<maintainer email="jorgehn@student.matnat.uio.no">Jørgen Nordmoen</maintainer>

	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>message_generation</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<exec_depend>message_runtime</exec_depend>
</package>
