<?xml version="1.0"?>
<package format="2">
  <name>crustcrawler_simulation</name>
  <version>0.1.0</version>
  <description>Meta package for Crustcrawler simulation</description>

  <maintainer email="jorgehn@student.matnat.uio.no">Jørgen Nordmoen</maintainer>
	<author>Jørgen Nordmoen</author>
	<url>https://github.uio.no/INF3480/crustcrawler_simulation</url>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>crustcrawler_control</exec_depend>
  <exec_depend>crustcrawler_description</exec_depend>
  <exec_depend>crustcrawler_gazebo</exec_depend>
  <exec_depend>crustcrawler_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage/>
  </export>
</package>
